# CubicEngine

./: .gitignore  ASSETS_LICENSE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  POLICY.md  README.md  SERVERS.md  TRADEMARK.md  cubic.toml  debuggl  debugvk  deny.toml  rungl  runvk  rust-analyzer.json
.github/workflows/: ci.yml
assets/shaders/: indirect_cull.comp  indirect_cull.comp.spv  noop.comp  noop.comp.spv  tri.frag  tri.frag.spv  tri.vert  tri.vert.spv
crates/cubic-app/: Cargo.toml
crates/cubic-app/src/: backend.rs  biome.rs  commands.rs  config.rs  flat_generator.rs  frustum.rs  game_override.rs  guest.rs  input.rs  loader.rs  main.rs  noise_generator.rs  profile.rs  test_world.rs  world.rs
crates/cubic-app/src/ui/: chat.rs  input_bar.rs  launcher.rs  mod.rs  pause.rs
crates/cubic-core/: Cargo.toml
crates/cubic-core/src/: lib.rs
crates/cubic-game/: Cargo.toml
crates/cubic-game/src/: climate.rs  generator.rs  heightmap.rs  lib.rs  player.rs  tectonics.rs  terrain_config.rs  world_constants.rs
crates/cubic-math/: Cargo.toml
crates/cubic-math/src/: lib.rs
crates/cubic-platform/: Cargo.toml
crates/cubic-platform/src/: lib.rs
crates/cubic-render/: Cargo.toml
crates/cubic-render-gl/: Cargo.toml
crates/cubic-render-gl/src/: lib.rs
crates/cubic-render-vk/: Cargo.toml  build.rs
crates/cubic-render-vk/src/: device.rs  egui_overlay.rs  frame.rs  instance.rs  lib copy (1).rs  lib copy.rs  lib.rs  pipeline.rs  resources.rs  swapchain.rs  sync.rs
crates/cubic-render/src/: lib.rs
crates/cubic-wasm/: Cargo.toml
crates/cubic-wasm/src/: lib.rs  tick.rs
crates/cubic-wasm/wit/: game.wit
crates/cubic-world/: Cargo.toml
crates/cubic-world/src/: generator.rs  lib.rs  mesher.rs  physics.rs  region.rs  stream.rs  stream_pool.rs  world_constants.rs
games/cubic-game/: game_overrides.toml
games/cubic-game/data/blocks/: dirt.toml  grass.toml  gravel.toml  ice.toml  sand.toml  snow.toml  stone.toml  water.toml
games/cubic-game/data/entities/: player.toml
games/cubic-game/data/world/: terrain.toml
tools/: build-game.fish  check-headers.sh  ci-local.fish  gen_crosshair.py  gen_highlight_obj.py  runclippy.sh  shader_make.sh
