[workspace]
members = [
  "crates/cubic-core",
  "crates/cubic-math",
  "crates/cubic-platform",
  "crates/cubic-render",
  "crates/cubic-render-gl",
  "crates/cubic-render-vk",
  "crates/cubic-world",
  "crates/cubic-app",
  "crates/cubic-wasm",
  # wasm32-wasip1-only plugin crate. It's a full workspace member (not its
  # own opt-out workspace) so rust-analyzer's default project discovery
  # actually picks it up instead of treating it as a detached file with no
  # crate graph or proc-macro expansion. Kept out of default-members below
  # so plain `cargo build`/`cargo test` at the root don't try to build it.
  "crates/cubic-game",
]
default-members = [
  "crates/cubic-core",
  "crates/cubic-math",
  "crates/cubic-platform",
  "crates/cubic-render",
  "crates/cubic-render-gl",
  "crates/cubic-render-vk",
  "crates/cubic-world",
  "crates/cubic-app",
  "crates/cubic-wasm",
]
resolver = "2"

[workspace.dependencies]
ash = "0.38"
ash-window = "0.13"
raw-window-handle = "0.6"
winit = "0.30"
glutin = "0.32"
glow = "0.16"
anyhow = "1"
tracing = "0.1"
thiserror = "2"
glam = "0.30"
tracing-subscriber = "0.3"
clap = "4"
bitflags = "2"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
portable-atomic = "1"
bytemuck = { version = "1", features = ["derive"] }
