[workspace]
members = [
  "crates/cubic-core",
  "crates/cubic-math",
  "crates/cubic-platform",
  "crates/cubic-render",
  "crates/cubic-render-gl",
  "crates/cubic-render-vk",
  "crates/cubic-world",
  "crates/cubic-app",
  "crates/cubic-wasm",
  # wasm32-unknown-unknown-only plugin crate. It's a full workspace member (not its
  # own opt-out workspace) so rust-analyzer's default project discovery
  # actually picks it up instead of treating it as a detached file with no
  # crate graph or proc-macro expansion. Kept out of default-members below
  # so plain `cargo build`/`cargo test` at the root don't try to build it.
  "crates/cubic-game",
]
default-members = [
  "crates/cubic-core",
  "crates/cubic-math",
  "crates/cubic-platform",
  "crates/cubic-render",
  "crates/cubic-render-gl",
  "crates/cubic-render-vk",
  "crates/cubic-world",
  "crates/cubic-app",
  "crates/cubic-wasm",
]
resolver = "2"

[workspace.dependencies]
ash = "0.38"
ash-window = "0.13"
raw-window-handle = "0.6"
winit = "0.30"
glutin = "0.32"
glow = "0.18"
anyhow = "1"
tracing = "0.1"
thiserror = "2"
glam = "0.33"
tracing-subscriber = "0.3"
clap = "4"
bitflags = "2"
serde = { version = "1", features = ["derive"] }
toml = "1.1"
# "serde" feature needed for toml_edit::ser::to_document (used by
# save_global_cfg) — not enabled by default (default = ["parse", "display"]).
toml_edit = { version = "0.25", features = ["serde"] }
portable-atomic = "1"
bytemuck = { version = "1", features = ["derive"] }
gpu-allocator = { version = "0.28", default-features = false, features = ["vulkan"] }
# egui-ash-renderer current version 0.11 and staged version 0.12 are incompatible
# with egui ^0.34 without updating Cargo.toml. Using a fork to do that until
# egui-ash-renderer is updated
egui = "0.35"
egui-winit = "0.35"
egui-ash-renderer = { version = "0.12", features = ["dynamic-rendering", "gpu-allocator"] }
image = { version = "0.25", default-features = false, features = ["png"] }
tobj = "4"
wasmtime = { version = "46.0.1", default-features = false, features = ["cranelift", "runtime", "anyhow"] }
wit-bindgen = "0.59"
noise = "0.9"
dirs = "6"
gilrs = "0.11"
lz4_flex = "0.13"

[patch.crates-io]
egui-ash-renderer = { git = "https://github.com/brendenhoffman/egui-ash-renderer" }
