[package]
name = "cubic-app"
version = "0.1.0"
edition = "2021"
publish = false


[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
cubic-core = { path = "../cubic-core" }
cubic-math = { path = "../cubic-math" }
cubic-render = { path = "../cubic-render" }
cubic-render-gl = { path = "../cubic-render-gl" }
cubic-render-vk = { path = "../cubic-render-vk" }
cubic-platform = { path = "../cubic-platform" }
serde = { workspace = true }
toml = { workspace = true }
tobj = "4"
cubic-world = { path = "../cubic-world" }

# winit lives in cubic-platform for now, APIs in use here via that crate
