[package]
name = "cubic-render-vk"
version = "0.1.0"
edition = "2021"

[dependencies]
cubic-render = { path = "../cubic-render" }
ash = { workspace = true, features = ["linked"] }
ash-window = { workspace = true }
raw-window-handle = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
